--- a/App/src/app/auth/forgot-password/forgot-password.page.html
+++ b/App/src/app/auth/forgot-password/forgot-password.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="card">
-    <form [formGroup]="forgotForm">
+ 
    
         <ion-grid>
           <ion-row class="ion-align-items-center ion-justify-content-center">
@@ -21,7 +21,7 @@
                 >
                 <ion-input
                   placeholder="Enter Mobile Number"
-                  formControlName="mobileNo"
+                  [(ngModel)]="mobileNo"
                 ></ion-input>
               </ion-item>
             </ion-col>
@@ -40,6 +40,6 @@
           </ion-row>
        
         </ion-grid>
-    </form>
+
   </div>
 </ion-content>
