edit profile css updated

--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -221,7 +221,7 @@
     <ion-col size="12">
       <ion-item fill="outline">
         <ion-label position="floating" labelPlacement="stacked"
-          >State
+          >{{'state' | translate}}
         </ion-label>
         <ionic-selectable
           item-content
