--- a/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
+++ b/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
@@ -11,44 +11,55 @@
       <form [formGroup]="editRegistrationForm">
         <ion-item>
           <ion-grid>
-            <ion-row class="ion-align-items-center  ion-justify-content-center">
+            <ion-row>
               <ion-col size="12">
-                <ion-item fill="outline" class="input" lines="none">
-                  <ion-label position="floating" lablePlacement="stacked">First Name</ion-label>
-                  <ion-input formControlName="firstName">
+                <ion-item class="input-class mt-3" lines="none">
+                  <ion-input label="First Name" label-placement="stacked" type="text" placeholder="Enter First Name"
+                    formControlName="firstName" >
                   </ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
-
-            <ion-row class="ion-align-items-center ion-justify-content-center">
+            <ion-row>
               <ion-col size="12">
-                <ion-item fill="outline" class="input" lines="none">
-                  <ion-label position="floating" lablePlacement="stacked">Last Name</ion-label>
-                  <ion-input formControlName="lastName">
+                <ion-item class="input-class mt-3" lines="none">
+                  <ion-input label="Last Name" label-placement="stacked" type="text" placeholder="Enter Last Name"
+                    formControlName="lastName" >
                   </ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
-            <ion-row class="ion-align-items-center ion-justify-content-center">
+            <ion-row>
               <ion-col size="12">
-                <ion-item fill="outline" class="input" lines="none">
-                  <ion-label position="floating" lablePlacement="stacked">Email</ion-label>
-                  <ion-input formControlName="email">
+                <ion-item class="input-class mt-3" lines="none">
+                  <ion-input label="Email" label-placement="stacked" type="text" placeholder="Enter Email"
+                    formControlName="email" >
                   </ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
-            <ion-row class="ion-align-items-center ion-justify-content-center">
+            <ion-row>
               <ion-col size="12">
-                <ion-item fill="outline" class="input" lines="none">
-                  <ion-label position="floating" lablePlacement="stacked">Mobile</ion-label>
-                  <ion-input formControlName="mobileNo">
+                <ion-item class="input-class mt-3" lines="none">
+                  <ion-input label="Mobile Number" label-placement="stacked" type="text" placeholder="Enter Mobile Number"
+                    formControlName="mobileNo" >
                   </ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
-            <ion-row class="ion-align-items-center ion-justify-content-center">
+            
+            
+            <ion-row>
+              <ion-col size="12">
+                <ion-item class="input-class mt-3" lines="none">
+                  <ion-input label="Pincode" label-placement="stacked" type="text" placeholder="Pincode"
+                    formControlName="pincode">
+                  </ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          
+            <!-- <ion-row class="ion-align-items-center ion-justify-content-center">
               <ion-col size="12">
                 <ion-item fill="outline" lines="none">
                   <ion-label position="floating" lablePlacement="stacked">State
@@ -106,7 +117,7 @@
                   </ionic-selectable>
                 </ion-item>
               </ion-col>
-            </ion-row>
+            </ion-row> -->
             <ion-row class="ion-align-items-center ion-justify-content-center">
               <ion-col size="12">
                 <ion-button expand="block" class="button ion-justify-content-end ion-padding" color="primary"
