--- a/App/src/app/auth/register/register.page.html
+++ b/App/src/app/auth/register/register.page.html
@@ -98,11 +98,11 @@
               [(ngModel)]="selectTable.state"
               [ngModelOptions]="{standalone: true}"
                       class="ion-text-capilatize"
-                      [items]="listData"
+                      [items]="states"
                       itemTextField="stateName"
-                      itemValueField="stateName"
+                      itemValueField="id"
                       [canSearch]="true"
-                      (onChange)="getDistrict()"
+                      (onChange)="getDistrictByStateId()"
                       [hasConfirmButton]="true"
                       [hasInfiniteScroll]="true"
                     >
@@ -124,9 +124,9 @@
               class="ion-text-capilatize"
               [items]="district"
               itemTextField="districtName"
-              itemValueField="districtName"
+              itemValueField="id"
               [canSearch]="true"
-              (onChange)="getTahsil()"
+              (onChange)="getTahsilByDistrictId()"
               [hasConfirmButton]="true"
               [hasInfiniteScroll]="true"
             >
@@ -146,9 +146,9 @@
                  class="ion-text-capilatize"
                  [items]="tehsil"
                 itemTextField="tahsilName"
-                itemValueField="tahsilName"
+                itemValueField="id"
                 [canSearch]="true"
-                (onChange)="getVillage()"
+                (onChange)="getVillageByTahsilId()"
                 [hasConfirmButton]="true"
                 [hasInfiniteScroll]="true"
             >
@@ -169,7 +169,7 @@
               class="ion-text-capilatize"
               [items]="village"
               itemTextField="villageName"
-              itemValueField="villageName"
+              itemValueField="id"
               [canSearch]="true"
               [hasConfirmButton]="true"
               [hasInfiniteScroll]="true"
