--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
@@ -67,7 +67,7 @@
                       <div class="ion-margin-top">
                         <i class="fa-solid fa-location-dot"></i>
                         <ion-label class="donar"
-                          >{{i?.city +', '+i?.state}}</ion-label
+                          >{{i?.district +', '+i?.state}}</ion-label
                         >
                       </div>
                       <div class="ion-margin-top donar-container">
@@ -138,7 +138,7 @@
                       <div class="ion-margin-top">
                         <i class="icons-img fa-solid fa-location-dot"></i>
                         <ion-label class="donar"
-                          >{{l?.city +', '+l?.state}}</ion-label
+                          >{{l?.district +', '+l?.state}}</ion-label
                         >
                       </div>
                       <div class="ion-margin-top donar-container">
