--- a/App/src/app/layout/pages/donate/donate.page.scss
+++ b/App/src/app/layout/pages/donate/donate.page.scss
@@ -2,3 +2,41 @@
     font-size: 1.4rem;
 
   }
+  ion-modal#example-modal {
+    --width: fit-content;
+    --width: 20rem;
+    // --max-width: 23rem;
+  
+    --height: fit-content;
+    --border-radius: 6px;
+    --box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
+    .top-sec {
+      background-color: var(--ion-color-secondary);
+      ion-icon {
+        margin: 0rem 0.4rem;
+        font-size: 22px;
+      }
+    }
+    ion-icon {
+      font-size: 22px;
+    }
+    ion-col {
+      margin: 0.3rem 0;
+      ion-button {
+        display: grid;
+        --border-radius: 5px;
+        --padding: 1rem;
+        height: 2.5rem;
+      }
+    }
+  }
+  
+  ion-modal::part(backdrop) {
+    background: rgba(209, 213, 219);
+    opacity: 1;
+  }
+  
+  ion-modal ion-toolbar {
+    --background: var(--ion-color-primary);
+    --color: white;
+  }
