--- a/App/src/app/shared/models/donation-details/donation-details.component.html
+++ b/App/src/app/shared/models/donation-details/donation-details.component.html
@@ -41,7 +41,7 @@
                   <ion-row>
                     <ion-col size="12">
                       <ion-label class="head">Donation Date </ion-label>
-                      <ion-label> : {{data?.donationDate | date}}</ion-label>
+                      <ion-label> : {{data?.donationDate}}</ion-label>
                     </ion-col>
                   </ion-row>
                   <ion-row>
@@ -356,7 +356,7 @@
         </div>
       </ion-accordion>
 
-      <ion-accordion value="fourth">
+      <ion-accordion value="fourth" *ngIf="data?.user?.id == user.id && (data.status == 'ACCEPTED' || data.status == 'DONE')">
         <ion-item slot="header" color="light">
           <i class="fa-solid fa-user"></i>
           <ion-label class="ion-padding-horizontal">Upload Image</ion-label>
